force-app/main/default/objects/SmallCase_Portfolio__c/SmallCase_Portfolio__c.object-meta.xml
<CustomObject>
    <label>SmallCase Portfolio</label>
    <nameField>
        <label>SmallCase Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SmallCase Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>