force-app/main/default/objects/SmallCase_Portfolio__c/fields/SmallCase__c.field-meta.xml
<CustomField>
    <fullName>SmallCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SmallCase</label>
    <referenceTo>SmallCase__c</referenceTo>
    <relationshipLabel>SmallCase Portfolios</relationshipLabel>
    <relationshipName>SmallCase_Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>