force-app/main/default/objects/SmallCase_Portfolio__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>SmallCase Portfolios</relationshipLabel>
    <relationshipName>SmallCase_Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>