force-app/main/default/objects/SmallCase_Portfolio__c/fields/Stock_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Stock_Weightage__c</fullName>
    <label>Stock Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>